# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: ci.yml
gendiff/: __init__.py  cli_parser.py  diff_tree.py  exceptions.py  parsers.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/test_data/: expected_nested_json.json
